# orangine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Prototype.sln  Prototype.sln.DotSettings  README.md  create-thirdparty-projects.bat  install-thirdparty-projects.bat  oe-build.bat  script.sh  thirdparty.json
Blogs/: GUI.md  (+2 more)
OeThirdParty/: CMakeLists.txt
Orangine/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Folder.DotSettings  oe-build.bat  pyenv-requirements.txt  renderdoc-settings.cap  setup.py
Orangine/OeApp/: CMakeLists.txt  OeAppConfig.cmake.in  OeAppConfigVersion.cmake.in  bindings.pyi
Orangine/OeApp/cmake/: OeAppConfig.cmake.in
Orangine/OeApp/scripts/: camera_controller.py
Orangine/OeApp/src/: App_win32.cpp  Game.cpp  Game.h  LogFileSink.cpp  LogFileSink.h  OeAppConfig.h.in  OeApp_bindings.cpp  OeApp_embedded_module.cpp  OeApp_embedded_module.h  OeApp_standalone_module.cpp  SampleScene.cpp  Statics.cpp  VectorLogSink.cpp  VectorLogSink.h  VisualStudioLogSink.h  Yaml_config_reader.cpp  filesinkhelper.ipp  pch.h
Orangine/OeApp/tests/: CMakeLists.txt  test_yaml_config_reader.cpp  tests_main.cpp  tests_main.h
Orangine/OeCore/: CMakeLists.txt  OeCoreConfig.cmake.in
Orangine/OeCore/cmake/: OeCoreConfig.cmake.in  OeCoreConfigVersion.cmake.in
Orangine/OeCore/codegen/: Renderer_enums.json
Orangine/OeCore/src/: Animation_controller_component.cpp  Animation_manager.cpp  Animation_manager.h  Asset_manager.cpp  Asset_manager.h  Behavior_manager.cpp  Behavior_manager.h  Camera_component.cpp  Clear_gbuffer_material.cpp  Collision.cpp  Color.cpp  Component.cpp  D3D_resources_manager.cpp  D3D_resources_manager.h  Deferred_light_material.cpp  Dev_tools_manager.cpp  Dev_tools_manager.h  DeviceResources.cpp  EngineUtils.cpp  Entity.cpp  Entity_filter_impl.cpp  Entity_filter_impl.h  Entity_graph_loader_gltf.cpp  Entity_render_manager.cpp  Entity_render_manager.h  Entity_repository.cpp  Entity_repository.h  Entity_scripting_manager.cpp  Entity_sorter.cpp  Fps_counter.cpp  Input_manager.cpp  Input_manager.h  JsonConfigReader.cpp  JsonConfigReader.h  Light_component.cpp  Light_provider.cpp  Material.cpp  Material_manager.cpp  Material_manager.h  Math_constants.cpp  (+40 more)
Orangine/OePipelineD3D12/: CMakeLists.txt
Orangine/OePipelineD3D12/cmake/: OePipelineD3D12Config.cmake.in  OePipelineD3D12ConfigVersion.cmake.in
Orangine/OePipelineD3D12/src/: Constant_buffer_pool.cpp  Constant_buffer_pool.h  D3D12_Lighting_manager.cpp  D3D12_Lighting_manager.h  D3D12_collision.cpp  D3D12_device_resources.cpp  D3D12_device_resources.h  D3D12_entity_render_manager.cpp  D3D12_entity_render_manager.h  D3D12_input_manager.cpp  D3D12_input_manager.h  D3D12_material_manager.cpp  D3D12_material_manager.h  D3D12_render_pass_shadow.cpp  D3D12_render_pass_shadow.h  D3D12_render_step_manager.cpp  D3D12_render_step_manager.h  D3D12_renderer_data.h  D3D12_renderer_types.h  D3D12_texture_manager.cpp  D3D12_texture_manager.h  D3D12_vendor.h  Descriptor_heap_pool.cpp  Descriptor_heap_pool.h  Frame_resources.cpp  Frame_resources.h  Gpu_buffer.cpp  Gpu_buffer.h  OePipelineD3D12.cpp  OePipelineD3D12Config.h.in  PipelineUtils.h  Primitive_mesh_data_factory.cpp  Primitive_mesh_data_factory.h  Render_pass_copy_depth_to_resource.cpp  Render_pass_copy_depth_to_resource.h  Statics.cpp
Orangine/OeScripting/: CMakeLists.txt  OeScriptingConfig.cmake.in  OeScriptingConfigVersion.cmake.in  bindings.pyi  pyenv-requirements.txt
Orangine/OeScripting/cmake/: OeScriptingConfig.cmake.in  oe_scripting.yaml.in
Orangine/OeScripting/scripts/: engine_internal.py
Orangine/OeScripting/src/: Binding_helpers.cpp  Engine_bindings.cpp  Engine_bindings.h  Engine_internal_module.cpp  Engine_internal_module.h  Entity_scripting_manager.cpp  Entity_scripting_manager.h  OeScripting.cpp  OeScriptingConfig.h.in  OeScripting_bindings.cpp  OeScripting_embedded_module.cpp  OeScripting_embedded_module.h  OeScripting_standalone_module.cpp  Python_headers.h  Script_component.cpp  Script_runtime_data.h  Statics.cpp  pch.h
Orangine/OeThirdParty/: CMakeLists.txt
Orangine/Prototype/: CMakeLists.txt  NatvisFile.natvis  Prototype.vcxproj  Prototype.vcxproj.filters
Orangine/Prototype/src/: Game.cpp  Game.h  LogFileSink.cpp  LogFileSink.h  PrototypeConfig.h.in  pch.h
Orangine/ViewerApp/: CMakeLists.txt  LICENSE.md  ViewerAppConfigVersion.cmake.in  imgui.ini
Orangine/ViewerApp/cmake/: ViewerAppConfig.cmake.in  viewer_app_config.yaml.in
Orangine/ViewerApp/scripts/: scenes.py
Orangine/ViewerApp/src/: Game.cpp  Game.h  Main.cpp  VectorLogSink.cpp  ViewerApp.cpp  ViewerAppConfig.h.in  config.default.json  filesinkhelper.ipp  pch.h
Orangine/cmake/modules/: FindDirectXTK.cmake  FindTheForge.cmake  OeCompilerFlags.cmake  OeCompilerFlagsConfig.cmake.in  OePython.cmake  OeThirdPartyContent.cmake  OeUtils.cmake  OeVars.cmake  PrecompiledHeader.cmake  PrintTargetProperties.cmake
Orangine/cmake/scripts/: codegen-enum.py  make_data_paths_config.py  merge_config.py  merge_yaml.py  update-thirdparty.py
Orangine/cmake/toolchains/: win32-x86.cmake
Prototype/: .gitignore  Alpha_sorter.cpp  Alpha_sorter.h  AssetManager.cpp  AssetManager.h  Asset_manager.cpp  Asset_manager.h  Bound.cpp  Bound.h  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  Camera_component.h  ClearGBufferMaterial.cpp  ClearGBufferMaterial.h  Clear_gbuffer_material.cpp  Clear_gbuffer_material.h  Component.cpp  Component.h  Constants.h  DeferredLightMaterial.cpp  DeferredLightMaterial.h  Deferred_light_material.cpp  Deferred_light_material.h  Entity.cpp  Entity.h  EntityFilter.h  EntityGraphLoader.h  EntityManager.cpp  EntityManager.h  EntityRenderManager.cpp  EntityRenderManager.h  EntityRenderService.cpp  EntityRenderService.h  EntityRenderer.cpp  EntityRenderer.h  EntityRepository.cpp  EntityRepository.h  EntityScriptingManager.cpp  EntityScriptingManager.h  (+89 more)
Prototype/data/meshes/: LICENSE.md
Prototype/shaders/: vertex_colors_PS.hlsl  vertex_colors_VS.hlsl
Prototype/src/: Game.cpp  Main.cpp  VectorLogSink.h
(+427 files in other folders)
